--- a/TetrisPC/TetrisPC.vcxproj.filters
+++ b/TetrisPC/TetrisPC.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="cotainer_wrapper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="feasible_field_generator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="endgame_generator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="writer.h">
@@ -45,6 +51,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="container_wrapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="feasible_field_generator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="endgame_generator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
