refactor for solver

--- a/TetrisPC/TetrisPC.vcxproj
+++ b/TetrisPC/TetrisPC.vcxproj
@@ -282,19 +282,25 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="basic_traverser.cpp" />
-    <ClCompile Include="cotainer_wrapper.cpp" />
     <ClCompile Include="endgame_generator.cpp" />
     <ClCompile Include="feasible_field_generator.cpp" />
+    <ClCompile Include="auxiliary_tree.cpp" />
+    <ClCompile Include="solver.cpp" />
+    <ClCompile Include="solver_parallel.cpp" />
+    <ClCompile Include="solver_task_generator.cpp" />
     <ClCompile Include="TetrisPC.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="auxtree.h" />
+    <ClInclude Include="auxiliary_tree.h" />
     <ClInclude Include="definition.h" />
     <ClInclude Include="container_wrapper.h" />
     <ClInclude Include="endgame_generator.h" />
     <ClInclude Include="feasible_field_generator.h" />
     <ClInclude Include="simulator.h" />
     <ClInclude Include="basic_traverser.h" />
+    <ClInclude Include="solver.h" />
+    <ClInclude Include="solver_parallel.h" />
+    <ClInclude Include="solver_task_generator.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="writer.h" />
   </ItemGroup>
